--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "bensampo/laravel-enum": "^6.12",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "2.0",
         "laravel/breeze": "^1.29",
